.provarCaches/00D5f000005vwGkEAI/objects/rstkf__cashreceipts__c.object
<CustomObject>
    <description>cashreceipts__c</description>
    <fields>
        <fullName>rstkf__aritem_accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_allowablediscdate__c</fullName>
        <label>Discn&apos;t Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_allowabledismaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discn&apos;t Offered In Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_amtappliedarcurr__c</fullName>
        <label>Amt Applied in Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_amtcashappliedmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Cash Applied Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_amtonetoonememoapplied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount One to One Memo Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_amttrymassapplycashapplied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Try Mass Apply Cash Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_amttryselapplycashapplied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Try Selected Apply Cash Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_amtwriteoff__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Write Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_amtwriteup__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Write Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_applicationtype__c</fullName>
        <label>Application Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_arcashd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Receipts Detail</label>
        <referenceTo>rstkf__arcashd__c</referenceTo>
        <relationshipLabel>Cash Receipts Process</relationshipLabel>
        <relationshipName>aritems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_arinvdue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receivable Transaction Scheduled Payment</label>
        <referenceTo>rstkf__arinvdue__c</referenceTo>
        <relationshipLabel>Cash Receipts Process</relationshipLabel>
        <relationshipName>aritems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_availabledisctmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available DIscount Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_balremainingarcurr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bal Remaining in Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_balremainingorigvalarcurr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Balance Remaining Orig Value AR Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_discamtcashappliedmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Amount Cash Applied Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_discamttrymassapplycashapplied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Disc Amount Try Mass Apply Cash Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_discamttryselapplycashapplied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Disc Amount Try Sel Apply Cash Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_discntamtarcurr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Taken in AR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_discnteligible__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Eligible for taking Discounts based on Due Dates.</inlineHelpText>
        <label>Discounts Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_discttknmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discounts Taken Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_key__c</fullName>
        <label>Session Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_openbalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_suggestedapplied__c</fullName>
        <label>Suggested / Applied</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_suggesteddisctmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Suggested Discount Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_transperformed__c</fullName>
        <label>Transaction Performed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_unsavedcrmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unsaved CR Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_unsaveddiscttknmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unsaved Discount Taken Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aritem_unsaveddrmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unsaved DR Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_rectype__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARITEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cash Receipts Process</label>
    <nameField>
        <label>Cash Receipts Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Receipts Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>